# uv

./: README.md
example/example-app/: README.md
example/example-ext/: Cargo.toml  README.md  pyproject.toml
example/example-ext/src/: lib.rs
example/example-ext/src/example_ext/: __init__.py
example/example-lib/: README.md  pyproject.toml
example/example-lib/src/example_lib/: __init__.py  main.py
example/example-pkg/: README.md  pyproject.toml
example/example-pkg/src/example_pkg/: main.py
test_uv_build/: README.md  main.py  pyproject.toml
uv_project/: main.py  pyproject.toml
uv_project/.ipynb_checkpoints/: pyproject-checkpoint.toml
uv_project/tests/: test_main.py
uv_verify/: verify_uv.py
